# MedGemma_DeepMind

./: README.md
application/: README.md  back.py  back_chat.py  back_environment.py  back_irm_analysis  back_irm_analysis.py  back_report.py  back_segmentation.py  dumpresp.txt  pyproject.toml
application/front/: package-lock.json
application/front/app/: page.tsx
application/front/app/chat/[patient]/: page.tsx
application/front/app/mri/[patient]/: page.tsx
application/front/app/report/[patient]/: page.tsx
application/front/public/mri/: slice.py
application/front/public/report/: report.html  report.json
frontend/: ariae_backend.py  chat.html  chat.js  data.js  index.html  main.js  pyproject.toml  style.css  viewer.html  viewer.js
frontend/api_calls/: test_remote_endpoint.py
frontend/assets/: extract_slices.py
nnunet-inference/: test_remote_endpoint.py
rag_medgemma/: README.md  get_references_from_rag_db.py  main.py
rapport/: generate_report.py
