[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.101.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-vision>=3.10.2",
    "requests>=2.32.4",
]
